--- a/Treehouse.FitnessFrog.Spa/Treehouse.FitnessFrog.Spa.csproj
+++ b/Treehouse.FitnessFrog.Spa/Treehouse.FitnessFrog.Spa.csproj
@@ -106,6 +106,8 @@
   <ItemGroup>
     <Compile Include="App_Start\SimpleInjectorWebApiInitializer.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\IntensitiesController.cs" />
+    <Compile Include="Controllers\ActivitiesController.cs" />
     <Compile Include="Controllers\EntriesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
