--- a/Treehouse.FitnessFrog.Spa/Treehouse.FitnessFrog.Spa.csproj
+++ b/Treehouse.FitnessFrog.Spa/Treehouse.FitnessFrog.Spa.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Controllers\IntensitiesController.cs" />
     <Compile Include="Controllers\ActivitiesController.cs" />
     <Compile Include="Controllers\EntriesController.cs" />
+    <Compile Include="Dto\EntryDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
